tests/baselines/reference/parserForOfStatement7.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement7.ts(1,25): error TS1091: Only a single variable declaration is allowed in a 'for...of' statement.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement7.ts (1 errors) ====
    for (var a: number = 1, b: string = "" of X) {
                            ~
!!! error TS1091: Only a single variable declaration is allowed in a 'for...of' statement.
    }